# csv-sqlite-converter

./: README.md  pyproject.toml  pytest.ini  requirements.txt
src/: __main__.py
src/context_managers/: csv_managers.py
src/csv_sqlite_converter/: __main__.py
src/csv_sqlite_converter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/csv_sqlite_converter/context_managers/: db_manager.py
src/csv_sqlite_converter/csv_to_sqlite/: input_checks.py  transfer_data_from_csv_to_sqlite.py
src/csv_sqlite_converter/sqlite_to_csv/: transfer_data_from_sqlite_to_csv.py
src/csv_sqlite_converter/validation/: db_input_validation.py
src/csv_to_sqlite/: input_checks.py  transfer_data_from_csv_to_sqlite.py
src/sqlite_to_csv/: files_paths.py  transfer_data_from_sqlite_to_csv.py
src/validation/: db_input_validation.py
tests/: constants_tests.py  test_csv_to_sqlite.py  test_sqlite_to_csv.py  test_validation.py
tests/example_files/: example_db-faces.db
tests/example_files/example_db-faces/: faces.csv  facestype.csv
