[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "csv-sqlite-converter"
version = "0.0.1"
description = "A convenient tool for transferring files between SQLite database and csv files and vice versa."
readme = "README.md"
authors = [{ name = "undeMalum", email = "polakwmc@gazeta.pl" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["csv", "sqlite", "converter"]
requires-python = ">=3.10"

    [project.optional-dependencies]
    build = ["build", "twine"]
    dev   = ["pytest"]

    [project.scripts]
    csv_sqlite_converter = "csv_sqlite_converter.__main__:main"

    [project.urls]
    repository    = "https://github.com/undeMalum/csv-sqlite-converter"